# web-term

./: .gitignore  compile.bat  compile.sh  run-desktop.sh  run-tauri.sh
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.3.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md  v0.3.0-REQUIREMENTS.md  v0.3.0-ROADMAP.md
.planning/phases/01-wterm-spike/: 01-01-PLAN.md  01-02-PLAN.md  01-REVIEW.md  01-SPIKE-RESULT.md
.planning/phases/02-connection-mgmt/: 02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-ssh-terminal/: 03-CONTEXT.md  03-DISCUSSION-LOG.md
.planning/phases/04-multi-tab-polish/: 04-02-PLAN.md  04-CONTEXT.md  04-UI-SPEC.md
.planning/phases/05-backend-ssh-key-storage/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md
.planning/phases/08-port-forwarding/: 08-02-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.serena/: project.yml
be/: .env.example  clip-local  go.mod  go.sum  main.go  web-term-clip
desktop/: WebTerm.desktop  main.js  package.json  preload.js  run-clipper.vbs
desktop-tauri/: package-lock.json  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: lib.rs
fe/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
fe/src/: App.css  App.tsx  electron.d.ts  index.css  main.tsx  wterm.d.ts
(+226 files in other folders)
